k8s/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medicu-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medicu
  template:
    metadata:
      labels:
        app: medicu
    spec:
      containers:
      - name: medicu
        image: sathish1102/medical-app:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: medicu-dev-service
  namespace: dev
spec:
  selector:
    app: medicu
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
